test/integration/bad/closures/closure_rng.stan
parameters {
  real y;
}
model {
  functions
  real foo_rng(real x) {
      return x + 1;
  }
  y ~ normal(0,1);
}